public/analytics-pro/v0.10/_sources/reference/tmlt/analytics/_query_expr_compiler/_no_privacy_core_measurements/index.rst.txt
:orphan:

..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


************************************
_no_privacy_core_measurements
************************************

.. py:module:: tmlt.analytics._query_expr_compiler._no_privacy_core_measurements

.. autoapi-nested-parse::

   Defines measurements that do not satisfy DP.











Classes
=======

.. list-table::

   * - :class:`.NPSum`
     - Returns the sum of a single numeric column in a spark DataFrame.
   * - :class:`.NPSumGrouped`
     - Computes the sum of a column for each group in a `GroupedDataFrame`.
   * - :class:`.NPQuantile`
     - Estimates the quantile of a spark DataFrame.
   * - :class:`.NPQuantileGrouped`
     - Estimates the quantile a column for each group in a `GroupedDataFrame`.
   * - :class:`.NPAverage`
     - Returns the NP average of a single numeric column in a spark DataFrame.
   * - :class:`.NPAverageGrouped`
     - Computes NPAverage of a column for each group in `GroupedDataFrame`.
   * - :class:`.NPVariance`
     - Returns the variance of a single numeric column in a spark DataFrame.
   * - :class:`.NPVarianceGrouped`
     - Computes variance of a column for each group in a `GroupedDataFrame`.
   * - :class:`.NPStandardDeviation`
     - Returns the standard deviation of a single numeric column in a spark DataFrame.
   * - :class:`.NPStandardDeviationGrouped`
     - Computes the stdev of a column for each group in a `GroupedDataFrame`.
   * - :class:`.GetUniqueValues`
     - Returns the unique values from the given columns.
   * - :class:`.NPBoundSelection`
     - Discovers a noisy bound based on a DataFrame Column.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPSum(input_domain, input_metric, measure_column)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Returns the sum of a single numeric column in a spark DataFrame.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Create the measurement
   >>> sum_X = NPSum(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     measure_column="X",
   ... )
   >>> # Apply measurement to data
   >>> sum_X(spark_dataframe)
   9
   >>> sum_X.privacy_function(1)
   oo






   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to be summed.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(df)

      Applies measurement.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPSumGrouped(input_domain, input_metric, measure_column, sum_column = None, lower = None, upper = None)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Computes the sum of a column for each group in a `GroupedDataFrame`.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkGroupedDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ...     SumOf,
       ... )
       >>> from tmlt.core.utils.grouped_dataframe import (
       ...     GroupedDataFrame,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Specify group keys
   >>> group_keys = spark.createDataFrame(
   ...     [("a0",), ("a2",)],
   ...     schema=["A"],
   ... )
   >>> # Note that we omit the key 'a1' even though it
   >>> # exists in the spark dataframe and include 'a0'.
   >>> # Create the measurement
   >>> sum_X_by_A = NPSumGrouped(
   ...     input_domain=SparkGroupedDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...         groupby_columns=["A"],
   ...     ),
   ...     input_metric=SumOf(SymmetricDifference()),
   ...     measure_column="X",
   ... )
   >>> # Create GroupedDataFrame
   >>> grouped_dataframe = GroupedDataFrame(
   ...     dataframe=spark_dataframe,
   ...     group_keys=group_keys,
   ... )
   >>> # Apply measurement to data
   >>> print_sdf(sum_X_by_A(grouped_dataframe))
       A  sum(X)
   0  a0       0
   1  a2       4

   >>> sum_X_by_A.privacy_function(1)
   oo



   .. list-table:: Methods

      * - :meth:`.measure_column`
        - Returns name of the column to be summed.
      * - :meth:`.sum_column`
        - Returns name of the output column containing sums.
      * - :meth:`.lower`
        - Returns the lower clipping bound.
      * - :meth:`.upper`
        - Returns the upper clipping bound.
      * - :meth:`.input_domain`
        - Returns input domain.
      * - :meth:`.output_type`
        - Returns output type for the measurement.
      * - :meth:`.privacy_function`
        - Returns the smallest d_out satisfied by the measurement (inf).
      * - :meth:`.__call__`
        - Returns a DataFrame containing the sum of `measure_column` for each group.
      * - :meth:`.input_metric`
        - Distance metric on input domain.
      * - :meth:`.output_measure`
        - Distance measure on output.
      * - :meth:`.is_interactive`
        - Returns true iff the measurement is interactive.
      * - :meth:`.privacy_relation`
        - Return True if close inputs produce close outputs.




   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to be summed.


   .. py:method:: sum_column()
      :property:

      Returns name of the output column containing sums.


   .. py:method:: lower()
      :property:

      Returns the lower clipping bound.


   .. py:method:: upper()
      :property:

      Returns the upper clipping bound.


   .. py:method:: input_domain()
      :property:

      Returns input domain.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(grouped_dataframe)

      Returns a DataFrame containing the sum of `measure_column` for each group.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPQuantile(input_domain, input_metric, quantile, measure_column)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Estimates the quantile of a spark DataFrame.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Create the measurement
   >>> quantile_X = NPQuantile(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     measure_column="X",
   ...     quantile=0.25,
   ... )
   >>> # Apply measurement to data
   >>> quantile_X(spark_dataframe)
   -1.0
   >>> quantile_X.privacy_function(1)
   oo






   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute quantile of.


   .. py:method:: quantile()
      :property:

      Returns the quantile to be computed.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(df)

      Applies measurement.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPQuantileGrouped(input_domain, input_metric, measure_column, quantile, quantile_column = None, lower = None, upper = None)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Estimates the quantile a column for each group in a `GroupedDataFrame`.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkGroupedDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ...     SumOf,
       ... )
       >>> from tmlt.core.utils.grouped_dataframe import (
       ...     GroupedDataFrame,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Specify group keys
   >>> group_keys = spark.createDataFrame(
   ...     [("a0",), ("a2",)],
   ...     schema=["A"],
   ... )
   >>> # Note that we omit the key 'a1' even though it
   >>> # exists in the spark dataframe and include 'a0'.
   >>> # Create the measurement
   >>> quantile_X_by_A = NPQuantileGrouped(
   ...     input_domain=SparkGroupedDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...         groupby_columns=["A"],
   ...     ),
   ...     input_metric=SumOf(SymmetricDifference()),
   ...     measure_column="X",
   ...     quantile=0.25,
   ... )
   >>> # Create GroupedDataFrame
   >>> grouped_dataframe = GroupedDataFrame(
   ...     dataframe=spark_dataframe,
   ...     group_keys=group_keys,
   ... )
   >>> # Apply measurement to data
   >>> print_sdf(quantile_X_by_A(grouped_dataframe))
       A  quantile
   0  a0       0.0
   1  a2       0.5

   >>> quantile_X_by_A.privacy_function(1)
   oo



   .. list-table:: Methods

      * - :meth:`.measure_column`
        - Returns name of the column to compute quantile of.
      * - :meth:`.quantile`
        - Returns the quantile to be computed.
      * - :meth:`.quantile_column`
        - Returns name of the output column containing quantile.
      * - :meth:`.lower`
        - Returns the lower clipping bound.
      * - :meth:`.upper`
        - Returns the upper clipping bound.
      * - :meth:`.input_domain`
        - Returns input domain.
      * - :meth:`.output_type`
        - Returns output type for the measurement.
      * - :meth:`.privacy_function`
        - Returns the smallest d_out satisfied by the measurement (inf).
      * - :meth:`.__call__`
        - Returns DataFrame containing quantile of specified column for each group.
      * - :meth:`.input_metric`
        - Distance metric on input domain.
      * - :meth:`.output_measure`
        - Distance measure on output.
      * - :meth:`.is_interactive`
        - Returns true iff the measurement is interactive.
      * - :meth:`.privacy_relation`
        - Return True if close inputs produce close outputs.




   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to compute quantile of.


   .. py:method:: quantile()
      :property:

      Returns the quantile to be computed.


   .. py:method:: quantile_column()
      :property:

      Returns name of the output column containing quantile.


   .. py:method:: lower()
      :property:

      Returns the lower clipping bound.


   .. py:method:: upper()
      :property:

      Returns the upper clipping bound.


   .. py:method:: input_domain()
      :property:

      Returns input domain.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(grouped_dataframe)

      Returns DataFrame containing quantile of specified column for each group.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPAverage(input_domain, input_metric, measure_column)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Returns the NP average of a single numeric column in a spark DataFrame.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Create the measurement
   >>> average_X = NPAverage(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     measure_column="X",
   ... )
   >>> # Apply measurement to data
   >>> average_X(spark_dataframe)
   2.25
   >>> average_X.privacy_function(1)
   oo






   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to be averaged.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(df)

      Applies measurement.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPAverageGrouped(input_domain, input_metric, measure_column, average_column = None, lower = None, upper = None)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Computes NPAverage of a column for each group in `GroupedDataFrame`.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkGroupedDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ...     SumOf,
       ... )
       >>> from tmlt.core.utils.grouped_dataframe import (
       ...     GroupedDataFrame,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Specify group keys
   >>> group_keys = spark.createDataFrame(
   ...     [("a0",), ("a2",)],
   ...     schema=["A"],
   ... )
   >>> # Note that we omit the key 'a1' even though it
   >>> # exists in the spark dataframe and include 'a0'.
   >>> # Create the measurement
   >>> average_X_by_A = NPAverageGrouped(
   ...     input_domain=SparkGroupedDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...         groupby_columns=["A"],
   ...     ),
   ...     input_metric=SumOf(SymmetricDifference()),
   ...     measure_column="X",
   ... )
   >>> # Create GroupedDataFrame
   >>> grouped_dataframe = GroupedDataFrame(
   ...     dataframe=spark_dataframe,
   ...     group_keys=group_keys,
   ... )
   >>> # Apply measurement to data
   >>> print_sdf(average_X_by_A(grouped_dataframe))
       A  average(X)
   0  a0         0.0
   1  a2         2.0

   >>> average_X_by_A.privacy_function(1)
   oo



   .. list-table:: Methods

      * - :meth:`.measure_column`
        - Returns name of the column to be averaged.
      * - :meth:`.average_column`
        - Returns name of the output column containing averages.
      * - :meth:`.lower`
        - Returns the lower clipping bound.
      * - :meth:`.upper`
        - Returns the upper clipping bound.
      * - :meth:`.input_domain`
        - Returns input domain.
      * - :meth:`.output_type`
        - Returns output type for the measurement.
      * - :meth:`.privacy_function`
        - Returns the smallest d_out satisfied by the measurement (inf).
      * - :meth:`.__call__`
        - Returns a df containing the NPAverage of `measure_column` for each group.
      * - :meth:`.input_metric`
        - Distance metric on input domain.
      * - :meth:`.output_measure`
        - Distance measure on output.
      * - :meth:`.is_interactive`
        - Returns true iff the measurement is interactive.
      * - :meth:`.privacy_relation`
        - Return True if close inputs produce close outputs.




   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to be averaged.


   .. py:method:: average_column()
      :property:

      Returns name of the output column containing averages.


   .. py:method:: lower()
      :property:

      Returns the lower clipping bound.


   .. py:method:: upper()
      :property:

      Returns the upper clipping bound.


   .. py:method:: input_domain()
      :property:

      Returns input domain.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(grouped_dataframe)

      Returns a df containing the NPAverage of `measure_column` for each group.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPVariance(input_domain, input_metric, measure_column)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Returns the variance of a single numeric column in a spark DataFrame.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Create the measurement
   >>> variance_X = NPVariance(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     measure_column="X",
   ... )
   >>> # Apply measurement to data
   >>> variance_X(spark_dataframe)
   6.250000000000001
   >>> variance_X.privacy_function(1)
   oo






   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to variance.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(df)

      Applies measurement.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPVarianceGrouped(input_domain, input_metric, measure_column, variance_column = None, lower = None, upper = None)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Computes variance of a column for each group in a `GroupedDataFrame`.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkGroupedDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ...     SumOf,
       ... )
       >>> from tmlt.core.utils.grouped_dataframe import (
       ...     GroupedDataFrame,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Specify group keys
   >>> group_keys = spark.createDataFrame(
   ...     [("a0",), ("a2",)],
   ...     schema=["A"],
   ... )
   >>> # Note that we omit the key 'a1' even though it
   >>> # exists in the spark dataframe and include 'a0'.
   >>> # Create the measurement
   >>> variance_X_by_A = NPVarianceGrouped(
   ...     input_domain=SparkGroupedDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...         groupby_columns=["A"],
   ...     ),
   ...     input_metric=SumOf(SymmetricDifference()),
   ...     measure_column="X",
   ... )
   >>> # Create GroupedDataFrame
   >>> grouped_dataframe = GroupedDataFrame(
   ...     dataframe=spark_dataframe,
   ...     group_keys=group_keys,
   ... )
   >>> # Apply measurement to data
   >>> print_sdf(variance_X_by_A(grouped_dataframe))
       A  variance(X)
   0  a0          NaN
   1  a2         18.0

   >>> variance_X_by_A.privacy_function(1)
   oo



   .. list-table:: Methods

      * - :meth:`.measure_column`
        - Returns name of the column to calculate variance on.
      * - :meth:`.variance_column`
        - Returns name of the output column containing variances.
      * - :meth:`.lower`
        - Returns the lower clipping bound.
      * - :meth:`.upper`
        - Returns the upper clipping bound.
      * - :meth:`.input_domain`
        - Returns input domain.
      * - :meth:`.output_type`
        - Returns output type for the measurement.
      * - :meth:`.privacy_function`
        - Returns the smallest d_out satisfied by the measurement (inf).
      * - :meth:`.__call__`
        - Returns a df containing the variance of `measure_column` for each group.
      * - :meth:`.input_metric`
        - Distance metric on input domain.
      * - :meth:`.output_measure`
        - Distance measure on output.
      * - :meth:`.is_interactive`
        - Returns true iff the measurement is interactive.
      * - :meth:`.privacy_relation`
        - Return True if close inputs produce close outputs.




   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to calculate variance on.


   .. py:method:: variance_column()
      :property:

      Returns name of the output column containing variances.


   .. py:method:: lower()
      :property:

      Returns the lower clipping bound.


   .. py:method:: upper()
      :property:

      Returns the upper clipping bound.


   .. py:method:: input_domain()
      :property:

      Returns input domain.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(grouped_dataframe)

      Returns a df containing the variance of `measure_column` for each group.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPStandardDeviation(input_domain, input_metric, measure_column)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Returns the standard deviation of a single numeric column in a spark DataFrame.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Create the measurement
   >>> stdev_X = NPStandardDeviation(
   ...     input_domain=SparkDataFrameDomain(
   ...         {
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     input_metric=SymmetricDifference(),
   ...     measure_column="X",
   ... )
   >>> # Apply measurement to data
   >>> stdev_X(spark_dataframe)
   2.5
   >>> stdev_X.privacy_function(1)
   oo






   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to calculate the standard deviation on.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(df)

      Applies measurement.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPStandardDeviationGrouped(input_domain, input_metric, measure_column, stdev_column = None, lower = None, upper = None)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Computes the stdev of a column for each group in a `GroupedDataFrame`.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> import pandas as pd
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkGroupedDataFrameDomain,
       ...     SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import (
       ...     SymmetricDifference,
       ...     SumOf,
       ... )
       >>> from tmlt.core.utils.grouped_dataframe import (
       ...     GroupedDataFrame,
       ... )
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1", "a1", "a2", "a2"],
       ...             "X": [2, 3, -1, 5],
       ...         }
       ...     )
       ... )

   >>> # Example input
   >>> print_sdf(spark_dataframe)
       A  X
   0  a1  2
   1  a1  3
   2  a2 -1
   3  a2  5
   >>> # Specify group keys
   >>> group_keys = spark.createDataFrame(
   ...     [("a0",), ("a2",)],
   ...     schema=["A"],
   ... )
   >>> # Note that we omit the key 'a1' even though it
   >>> # exists in the spark dataframe and include 'a0'.
   >>> # Create the measurement
   >>> stdev_X_by_A = NPStandardDeviationGrouped(
   ...     input_domain=SparkGroupedDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "X": SparkIntegerColumnDescriptor(),
   ...         },
   ...         groupby_columns=["A"],
   ...     ),
   ...     input_metric=SumOf(SymmetricDifference()),
   ...     measure_column="X",
   ... )
   >>> # Create GroupedDataFrame
   >>> grouped_dataframe = GroupedDataFrame(
   ...     dataframe=spark_dataframe,
   ...     group_keys=group_keys,
   ... )
   >>> # Apply measurement to data
   >>> print_sdf(stdev_X_by_A(grouped_dataframe))
       A  stdev(X)
   0  a0       NaN
   1  a2  4.242641

   >>> stdev_X_by_A.privacy_function(1)
   oo



   .. list-table:: Methods

      * - :meth:`.measure_column`
        - Returns name of the column to calculate stdev on.
      * - :meth:`.stdev_column`
        - Returns name of the output column containing standard deviatoins.
      * - :meth:`.lower`
        - Returns the lower clipping bound.
      * - :meth:`.upper`
        - Returns the upper clipping bound.
      * - :meth:`.input_domain`
        - Returns input domain.
      * - :meth:`.output_type`
        - Returns output type for the measurement.
      * - :meth:`.privacy_function`
        - Returns the smallest d_out satisfied by the measurement (inf).
      * - :meth:`.__call__`
        - Returns a df containing the stdev of `measure_column` for each group.
      * - :meth:`.input_metric`
        - Distance metric on input domain.
      * - :meth:`.output_measure`
        - Distance measure on output.
      * - :meth:`.is_interactive`
        - Returns true iff the measurement is interactive.
      * - :meth:`.privacy_relation`
        - Return True if close inputs produce close outputs.




   .. automethod:: __init__
   .. py:method:: measure_column()
      :property:

      Returns name of the column to calculate stdev on.


   .. py:method:: stdev_column()
      :property:

      Returns name of the output column containing standard deviatoins.


   .. py:method:: lower()
      :property:

      Returns the lower clipping bound.


   .. py:method:: upper()
      :property:

      Returns the upper clipping bound.


   .. py:method:: input_domain()
      :property:

      Returns input domain.


   .. py:method:: output_type()
      :property:

      Returns output type for the measurement.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(grouped_dataframe)

      Returns a df containing the stdev of `measure_column` for each group.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: GetUniqueValues(columns, input_domain, input_metric, count_column = None)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Returns the unique values from the given columns.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain, SparkIntegerColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import SymmetricDifference
       >>> from tmlt.core.measures import PureDP
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()


   >>> input_domain = SparkDataFrameDomain(
   ...     {
   ...         "A": SparkIntegerColumnDescriptor(),
   ...         "B": SparkIntegerColumnDescriptor(),
   ...         "C": SparkIntegerColumnDescriptor(),
   ...     },
   ... )
   >>> measurement = GetUniqueValues(
   ...     columns=["A", "B"],
   ...     input_domain=input_domain,
   ...     input_metric=SymmetricDifference(),
   ... )
   >>> data = spark.createDataFrame(
   ...     [(1, 1, 1), (1, 2, 2), (1, 2, 3)], ["A", "B", "C"]
   ... )
   >>> print_sdf(measurement(data))
      A  B  count
   0  1  1      1
   1  1  2      2






   .. automethod:: __init__
   .. py:method:: columns()
      :property:

      Returns the columns to return unique values for.


   .. py:method:: count_column()
      :property:

      Returns the count column name.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement (inf).

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(df)

      Apply measurement.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: NPBoundSelection(input_domain, bound_column)

   Bases: :class:`tmlt.core.measurements.base.Measurement`

   Discovers a noisy bound based on a DataFrame Column.

   .. warning::
       This measurement does not satisfy differential privacy (has an infinite d_out).

   .. rubric:: Example

   ..
       >>> from pyspark.sql import SparkSession
       >>> from tmlt.core.domains.spark_domains import (
       ...     SparkDataFrameDomain, SparkIntegerColumnDescriptor,
       ...     SparkStringColumnDescriptor,
       ... )
       >>> from tmlt.core.metrics import SymmetricDifference
       >>> from tmlt.core.utils.misc import print_sdf
       >>> spark = SparkSession.builder.getOrCreate()
       >>> spark_dataframe = spark.createDataFrame(
       ...     pd.DataFrame(
       ...         {
       ...             "A": ["a1"] * 100,
       ...             "B": [10] * 10 + [20] * 20 + [30] * 30 + [40] * 40,
       ...         }
       ...     )
       ... )
       >>> min_bound, max_bound = -64, 64

   >>> # Example input
   >>> print_sdf(spark_dataframe)
        A   B
   0   a1  10
   1   a1  10
   2   a1  10
   3   a1  10
   4   a1  10
   ..  ..  ..
   95  a1  40
   96  a1  40
   97  a1  40
   98  a1  40
   99  a1  40
   <BLANKLINE>
   [100 rows x 2 columns]
   >>> measurement = NPBoundSelection(
   ...     input_domain=SparkDataFrameDomain(
   ...         schema={
   ...             "A": SparkStringColumnDescriptor(),
   ...             "B": SparkIntegerColumnDescriptor(),
   ...         },
   ...     ),
   ...     bound_column="B",
   ... )
   >>> min_bound, max_bound = measurement(spark_dataframe) # doctest: +SKIP
   >>> print(f"Min: {min_bound}, Max: {max_bound}")  # doctest: +NORMALIZE_WHITESPACE
   Min: -64, Max: 64






   .. automethod:: __init__
   .. py:method:: bound_column()
      :property:

      Returns the column to compute the bounds for.


   .. py:method:: privacy_function(d_in)

      Returns the smallest d_out satisfied by the measurement.

      See `the architecture guide <https://docs.tmlt.dev/core/latest/topic-guides/architecture.html>`_
      for more information.

      :param d_in: Distance between inputs under input_metric.


   .. py:method:: __call__(sdf)

      Returns the bounds for the given column.


   .. py:method:: input_domain()
      :property:

      Return input domain for the measurement.


   .. py:method:: input_metric()
      :property:

      Distance metric on input domain.


   .. py:method:: output_measure()
      :property:

      Distance measure on output.


   .. py:method:: is_interactive()
      :property:

      Returns true iff the measurement is interactive.


   .. py:method:: privacy_relation(d_in, d_out)

      Return True if close inputs produce close outputs.

      See the privacy and stability tutorial (add link?) for more information.

      :param d_in: Distance between inputs under `input_metric`.
      :param d_out: Distance between outputs under `output_measure`.







